# mycraft

./: Cargo.toml  README.md
scripts/: sky_gradient.py
src/: camera.rs  consts.rs  context.rs  cube.rs  egui.rs  game.rs  input1d.rs  main.rs  meshes.rs  rendering.rs  resources.rs  sky.rs  utils.rs  world.rs
src/rendering/: block_renderer.rs  block_shader.wgsl  chunk_mesh.rs  chunk_renderer.rs  chunk_shader.wgsl  frustrum.rs  line_renderer.rs  line_shader.wgsl  meshes.rs  sky_renderer.rs  sky_shader.wgsl  solid_block_pipeline.rs  solid_block_renderer.rs  solid_block_shader.wgsl  texture.rs  uniform.rs  vertex_array.rs  water_pipeline.rs  water_renderer.rs  water_shader.wgsl  world_renderer.rs
src/utils/: aabb.rs  input.rs  raycasting.rs
src/world/: blocks.rs  chunk_queue.rs  generation.rs  light.rs  mesh.rs  utils.rs
