[package]
name = "mycraft"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
winit = "0.27.3"
wgpu = "0.15"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4.17"
env_logger = "0.10.0"
pollster = "0.3.0"
noise = "0.8.2"

[profile.dev]
opt-level = 1
