[package]
name = "mycraft"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
winit = "0.28.3"
wgpu = "0.16"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4.17"
env_logger = "0.10.0"
pollster = "0.3.0"
noise = "0.8.2"
num_enum = "0.5.11"
anyhow = "1.0.70"

[profile.dev]
opt-level = 1
